# QuesoPlumaEditor

./: CMakeLists.txt  editor.cpp  editor.hpp  example.plx  main.cpp  myedit.cpp
